contrast issues solved

--- a/styles/temples.css
+++ b/styles/temples.css
@@ -106,7 +106,7 @@ figure img {
 }
 
 figcaption {
-    color: rgb(170, 0, 170);
+    color: rgb(106, 0, 106);
 }
 
 footer
